# trame-vtk

./: ,  .codespellrc  .coveragerc  .externals.sha256  .fetch_externals.sh  .flake8  .gitignore  .ignore-words.txt  .pre-commit-config.yaml  .static_viewer.sha256  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: test_and_release.yml
examples/data/: big-int-coord.vtr
examples/pyvista/: ambient.py  export_scene.py  grid.py  html_export.py  lighting.py  picking.py  pump_bracket.py  push_camera_many_actors.py  ratios.py  scalar_range.py  silhouette.py  simple.py  toggle_edge_lighting.py  toggle_edges_many_actors.py  volume.py
examples/validation/: AddRemoveActors.py  Animation.py  AnimationPV.py  AxesActor.py  BigIntCoords.py  CaptureImage.py  CaptureImageLocal.py  CaptureImageRemote.py  ColorByComponent.py  ColorByComponentPyVista.py  ExportScene.py  ManyViews.py  NoSize.py  PickingLocalView.py  PickingRemoteLocalView.py  PickingRemoteView.py  PushCamera.py  PvConeLocal.py  PvConeRemote.py  PvConeRemoteLocal.py  PyVistaAxesGrid.py  PyVistaAxesWidget.py  PyVistaAxesWidgetSubplot.py  PyVistaAxesWidgetSubplotLinked.py  PyVistaDynaLUT.py  PyVistaFirstStillRatio.py  PyVistaInt64.py  PyVistaLookupTable.py  PyVistaVolumeRendering.py  SwitchView.py  VolumeRendering.py  VtkRayCast.py
examples/vue2/: cone-client.py  cone-local.py  cone-remote.py  cone-toggle.py  pv-cone-toggle.py  vtkjs-mesh.py  vtkjs-pipeline.py  vtkjs-polydata.py
examples/vue3/: cone-client.py  cone-local.py  cone-remote.py  cone-toggle.py  cone-webxr.py  vtkjs-mesh.py  vtkjs-pipeline.py  vtkjs-polydata.py
examples/widgets/: clip.py
src/trame/modules/: vtk.py
src/trame/tools/: vtksz2html.py
src/trame/widgets/: paraview.py  vtk.py
src/trame_vtk/: __init__.py
src/trame_vtk/modules/common/: __init__.py
src/trame_vtk/modules/common/serve/: trame-vtk.js
src/trame_vtk/modules/paraview/: LICENSE.md  __init__.py
src/trame_vtk/modules/paraview/protocols/: __init__.py  local_rendering.py  mouse_handler.py  publish_image_delivery.py  view_port.py  web_protocol.py
src/trame_vtk/modules/vtk/: LICENSE.md  __init__.py  core.py  widget.py
src/trame_vtk/modules/vtk/protocols/: __init__.py  local_rendering.py  mouse_handler.py  publish_image_delivery.py  view_port.py  web_protocol.py
src/trame_vtk/modules/vtk/serializers/: __init__.py  actors.py  cache.py  data.py  export.py  helpers.py  initialize.py  lights.py  lookup_tables.py  mappers.py  mesh.py  properties.py  render_windows.py  serialize.py  synchronization_context.py  textures.py  utils.py  widgets.py
src/trame_vtk/tools/: static_viewer.html  vtksz2html.py
src/trame_vtk/widgets/vtk/: __init__.py  common.py
tests/: conftest.py  requirements.txt  test_big_int.py  test_export.py  test_gc.py  test_import.py  test_remote_rendering.py  test_volume_rendering.py
tests/refs/: test_rendering_int64.yml  test_rendering_lut.yml  test_rendering_volume.yml
trame/modules/: vtk.py
trame/widgets/: paraview.py  vtk.py
trame_vtk/: __init__.py
trame_vtk/modules/paraview/: __init__.py  core.py
trame_vtk/modules/paraview/protocols/: local_rendering.py  mouse_handler.py  publish_image_delivery.py  view_port.py  web_protocol.py
trame_vtk/modules/vtk/: __init__.py  addon_serializer.py  core.py
trame_vtk/modules/vtk/protocols/: __init__.py  file_browser.py  local_rendering.py  mouse_handler.py  protocols.py  publish_image_delivery.py  render_window_serializer.py  utils.py  view_port.py  view_port_geometry_delivery.py  view_port_image_delivery.py  web_protocol.py
trame_vtk/modules/vtk/protocols/serializers/: __init__.py  initialize.py  lookup_tables.py  mappers.py  mesh.py  properties.py  registry.py  render_windows.py  synchronization_context.py  textures.py  utils.py
trame_vtk/modules/vtk/serializers/: __init__.py  actors.py  data.py  export.py  helpers.py  initialize.py  lights.py  lookup_tables.py  mappers.py  mesh.py  properties.py  pwf.py  registry.py  render_windows.py  serialize.py  synchronization_context.py  textures.py  utils.py  widgets.py
trame_vtk/tools/: .gitignore  vtksz2html.py
trame_vtk/widgets/vtk/: __init__.py  common.py
visual_baseline/: .gitignore
visual_baseline/test_reactivity[examples/validation/PyVistaInt64.py]/init/: tags_level_3.txt
visual_baseline/test_reactivity[examples/validation/PyVistaLookupTable.py]/init/: tags_level_3.txt
visual_baseline/test_rendering[examples/validation/PyVistaInt64.py]/init/: tags_level_1.txt  tags_level_2.txt  tags_level_3.txt
visual_baseline/test_rendering[examples/validation/PyVistaLookupTable.py]/init/: tags_level_2.txt  tags_level_3.txt
visual_baseline/test_rendering[examples/validation/VolumeRendering.py]/init/: tags_level_3.txt
vue23/: package-lock.json  package.json  vite.config.js
