[metadata]
name = trame-vtk
version = 2.5.4
description = VTK widgets for trame
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame-client

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
